--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,7 +285,7 @@ margin-bottom: 20px;
         flex-direction: column;
         position: absolute;
         width: 100vw;
-        margin-top: 100px;
+        margin-top: 80px;
         box-sizing: border-box;
         top: 20px;
         text-align: center;
@@ -355,6 +355,10 @@ display: block;
 
     .btn-nav{
         margin: 5px 0;
+    }
+
+    .btn-pad{
+        margin: 5px;
     }
 
 
