--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -463,6 +463,7 @@ display: block;
         border-radius: 2px;
         justify-content: center;
         padding: 10px;
+        border-radius: 10px;
         width: 250px;
         text-align: center;
         align-items: center;
@@ -536,7 +537,7 @@ display: block;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
-        color: #221f1f;
+        color: #3d3c3c;
         margin-bottom: 20px;
         }
 
